scripts/kubernetes/service.yaml
# 业务服务
# 先 all in one

apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    traefik.enable: "true"
    traefik.http.routers.api-gw.rule: PathPrefix(`/`)
    traefik.http.services.api-gw.loadbalancer.server.port: "3000"
  labels:
    com.msgbyte.tailchat.k8s.service: tailchat-service-all
  name: tailchat-service-all
  namespace: tailchat
spec:
  replicas: 1
  selector:
    matchLabels:
      com.msgbyte.tailchat.k8s.service: tailchat-service-all
  strategy: {}
  template:
    metadata:
      annotations:
        traefik.enable: "true"
        traefik.http.routers.api-gw.rule: PathPrefix(`/`)
        traefik.http.services.api-gw.loadbalancer.server.port: "3000"
      labels:
        com.msgbyte.tailchat.k8s.network/internal: "true"
        com.msgbyte.tailchat.k8s.service: tailchat-service-all
    spec:
      containers:
        - image: moonrailgun/tailchat-server
          name: tailchat-service-all
          resources: {}
      restartPolicy: Always
status: {}
